# rp2040-rfc2217

./: Cargo.toml  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: binary_info.rs  client.rs  control.rs  main.rs  server.rs  telnet.rs  utils.rs
